tests/ui/openapi_type/tuple_struct.stderr
error: #[derive(OpenapiType)] does not support unnamed fields
 --> $DIR/tuple_struct.rs:5:11
  |
5 | struct Foo(String);
  |           ^^^^^^^^
