tests/ui/openapi_type/tuple_struct.rs
#[macro_use]
extern crate gotham_restful;

#[derive(OpenapiType)]
struct Foo(String);

fn main() {}
